--- a/config/llm.yaml
+++ b/config/llm.yaml
@@ -1,7 +1,8 @@
-# llm.yaml — конфиг моделей
 junior:
-  model_id: "small-cpu-model"
+  model_id: "deepseek-r1-1_5b"   # или любая ≤3B
   max_new_tokens: 64
+  temperature: 0.2
 senior:
   model_id: "mistral-7b"
-  temperature: 0.8
+  temperature: 0.7
+  max_new_tokens: 512
