--- a/config/llm.yaml
+++ b/config/llm.yaml
@@ -1,8 +1,9 @@
 junior:
-  model_id: "deepseek-r1-1_5b"   # или любая ≤3B
-  max_new_tokens: 64
+  provider: "llama-cpp"
+  model_path: ".\\models\\gemma3n-e4b\\google_gemma-3n-E4B-it-Q4_K_M.gguf"
   temperature: 0.2
-  endpoint: "https://api.your-llm-provider.example/v1/chat/completions"
+  max_new_tokens: 64
+  stop: ["\n\n", "```"]
 senior:
   model_id: "mistral-7b"
   temperature: 0.7
