Update local LLM configuration

--- a/config/llm.yaml
+++ b/config/llm.yaml
@@ -3,9 +3,10 @@ junior:
   model_path: ".\\models\\gemma3n-e4b\\google_gemma-3n-E4B-it-Q4_K_M.gguf"
   temperature: 0.2
   max_new_tokens: 64
-  stop: ["\n\n", "```"]
+  stop: ["\n\n","```"]
 senior:
-  model_id: "mistral-7b"
+  provider: "transformers"
+  model_id: "mistralai/Mistral-7B-Instruct-v0.3"
   temperature: 0.7
   max_new_tokens: 512
-  endpoint: "https://api.your-llm-provider.example/v1/chat/completions"
+  stop: ["\n\n"]
