Configure local LLM paths and enforce offline mode

--- a/config/llm.yaml
+++ b/config/llm.yaml
@@ -1,13 +1,12 @@
 junior:
   provider: "llama-cpp"
-  model_path: ".\\models\\gemma3n-e4b\\google_gemma-3n-E4B-it-Q4_K_M.gguf"
+  model_path: "C:\\Users\\kosha\\models\\gemma3n-e4b\\google_gemma-3n-E4B-it-Q4_K_M.gguf"
   temperature: 0.2
   max_new_tokens: 64
-  stop: ["\n\n","
-"]
+  stop: ["\n\n","```"]
 senior:
   provider: "transformers"
-  model_id: "mistralai/Mistral-7B-Instruct-v0.3"
+  model_path: "C:\\Users\\kosha\\Arkestra\\models\\mistral-7b-instruct-v0_3"
   temperature: 0.7
   max_new_tokens: 512
   stop: ["\n\n"]
