--- a/config/llm.yaml
+++ b/config/llm.yaml
@@ -6,7 +6,7 @@ junior:
   stop: ["\n\n","```"]
 senior:
   provider: "transformers"
-  model_path: "C:\\Users\\kosha\\Arkestra\\models\\mistral-7b-instruct-v0_3"
+  model_path: "C:\\Users\\kosha\\models\\mistral-7b-instruct-v0_3"
   temperature: 0.7
   max_new_tokens: 512
   stop: ["\n\n"]
