Improve senior prompt context and history budget

--- a/config/persona.yaml
+++ b/config/persona.yaml
@@ -1,5 +1,6 @@
 persona:
   name: "Arkestra"
+  description: "Тёплый русскоязычный ИИ-компаньон, который поддерживает собеседника, интересуется делами и помогает с задачами."
 
 baseline_levels:
   dopamine: 6
