--- a/config/llm.yaml
+++ b/config/llm.yaml
@@ -1,11 +1,13 @@
 junior:
-  provider: "llama-cpp"
-  model_path: "C:\\Users\\kosha\\models\\gemma3n-e4b\\google_gemma-3n-E4B-it-Q4_K_M.gguf"
-  n_ctx: 4096
-  n_gpu_layers: -1
-  temperature: 0.2
+  provider: transformers
+  model_id: meta-llama/Llama-3.2-1B-Instruct
+  load_in_4bit: true
+  torch_dtype: float16
+  device_map: auto
   max_new_tokens: 160
+  temperature: 0.2
   stop: ["</json>"]
+  use_chat_template: true
 senior:
   provider: "transformers"
   model_path: "C:\\Users\\kosha\\models\\mistral-7b-instruct-v0_3"
